ghc-4335c07/testsuite/tests/rename/should_compile/Rn059_B.hs

module Rn059_B where

data B = B { label :: Char }

