ghc-4335c07/testsuite/tests/rename/should_fail/T9156.hs
module T9156 where

data D = D1 { f1 :: Int }
       | D2 { f1, f1 :: Int }
